--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
+ <table border="1">
+    <thead>
+        <tr>
+            <th># Piezas</th>
+            <th>$ Unitario</th>
+            <th>$ Total</th>
+            <th>Exprés</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr><td>25</td><td><b>$</b>45.00</td><td><b>$</b>1,125.00</td><td><b>$</b>1,625.00</td></tr>
+        <tr><td>50</td><td><b>$</b>30.00</td><td><b>$</b>1,500.00</td><td><b>$</b>2,000.00</td></tr>
+        <tr><td>100</td><td><b>$</b>25.00</td><td><b>$</b>2,500.00</td><td><b>$</b>3,000.00</td></tr>
+        <tr><td>200</td><td><b>$</b>24.00</td><td><b>$</b>4,800.00</td><td><b>$</b>5,500.00</td></tr>
+        <tr><td>300</td><td><b>$</b>23.00</td><td><b>$</b>6,900.00</td><td><b>$</b>7,900.00</td></tr>
+        <tr><td>400</td><td><b>$</b>22.00</td><td><b>$</b>8,800.00</td><td><b>$</b>9,800.00</td></tr>
+        <tr><td>500</td><td><b>$</b>20.00</td><td><b>$</b>10,000.00</td><td><b>$</b>11,000.00</td></tr>
+        <tr><td>600</td><td><b>$</b>19.00</td><td><b>$</b>11,400.00</td><td><b>$</b>12,400.00</td></tr>
+        <tr><td>700</td><td><b>$</b>18.00</td><td><b>$</b>12,600.00</td><td><b>$</b>13,600.00</td></tr>
+        <tr><td>800</td><td><b>$</b>17.00</td><td><b>$</b>13,600.00</td><td><b>$</b>14,600.00</td></tr>
+        <tr><td>900</td><td><b>$</b>16.00</td><td><b>$</b>14,400.00</td><td><b>$</b>15,400.00</td></tr>
+        <tr><td>1000</td><td><b>$</b>16.00</td><td><b>$</b>16,000.00</td><td><b>$</b>17,000.00</td></tr>
+    </tbody>
+</table>
+
 </body>
-</html>
