--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <th># Piezas</th>
             <th>$ Unitario</th>
             <th>$ Total</th>
-            <th>Exprés</th>
+            <th>Expréss</th>
         </tr>
     </thead>
     <tbody>
